@@ -1,3 +1,0 @@
-CMK_DEFS="$CMK_DEFS -D_REENTRANT"
-CMK_LIBS=" -lpthread $CMK_LIBS "
-CMK_SMP='1'
